src/snapshots/kajit__disasm_tests__disasm_json_enum_internal_x86_64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== json/enum_internal ===
> push rbp
  sub rsp, 0x60
  mov qword [rsp], rbp
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  cmp r12, r13
  jge $+0x47
  movzx r10d, byte [r12]
  cmp r10b, 0x20
  jz $+0x1e
  cmp r10b, 0x9
  jz $+0x14
  cmp r10b, 0xa
  jz $+0xa
  cmp r10b, 0xd
  jnz $+0x8
  inc r12
  jmp $-0x3e
  cmp r10b, 0x7b
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x5
  jmp $+0xacc
  cmp r12, r13
  jnb $+0x2d
  movzx eax, byte [r12]
  cmp al, 0x20
  jz $+0x18
  cmp al, 0xa
  jz $+0x10
  cmp al, 0xd
  jz $+0x8
  cmp al, 0x9
  jnz $+0x8
  inc r12
  jmp $-0x36
  cmp r12, r13
  jnb $+0x13
  cmp byte [r12], 0x22
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x7
  jmp $+0xa6a
  mov qword [rsp + 0x38], r12
  mov eax, 0x22222222
  movq xmm1, rax
  pshufd xmm1, xmm1, 0x0
  mov eax, 0x5c5c5c5c
  movq xmm2, rax
  pshufd xmm2, xmm2, 0x0
  mov rax, r13
  sub rax, r12
  cmp rax, 0x10
  jb $+0x46
  movdqu xmm0, xmmword [r12]
  movdqa xmm3, xmm1
  pcmpeqb xmm3, xmm0
  movdqa xmm4, xmm2
  pcmpeqb xmm4, xmm0
  por xmm3, xmm4
  pmovmskb eax, xmm3
  test eax, eax
  jz $+0x17
  tzcnt eax, eax
  add r12, rax
  cmp byte [r12], 0x22
  jz $+0x34
  jmp $+0x4a
  add r12, 0x10
  jmp $-0x58
  cmp r12, r13
  jnb $+0x8e
  movzx eax, byte [r12]
  cmp al, 0x22
  jz $+0x10
  cmp al, 0x5c
  jz $+0x23
  inc r12
  jmp $-0x26
  mov rax, r12
  sub rax, qword [rsp + 0x38]
  mov qword [rsp + 0x40], rax
  inc r12
  jmp $+0x66
  mov r10, qword [rsp + 0x38]
  mov rax, r12
  sub rax, r10
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r10
  mov rdx, rax
  lea rcx, qword [rsp + 0x38]
  lea r8, qword [rsp + 0x40]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x95c
  jmp $+0x10
  mov dword [r15 + 0x10], 0x8
  jmp $+0x947
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x4
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x2d
  mov qword [r15], r12
  mov rdi, r15
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x8e6
  cmp r12, r13
  jge $+0x47
  movzx r10d, byte [r12]
  cmp r10b, 0x20
  jz $+0x1e
  cmp r10b, 0x9
  jz $+0x14
  cmp r10b, 0xa
  jz $+0xa
  cmp r10b, 0xd
  jnz $+0x8
  inc r12
  jmp $-0x3e
  cmp r10b, 0x3a
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x6
  jmp $+0x886
  cmp r12, r13
  jnb $+0x2d
  movzx eax, byte [r12]
  cmp al, 0x20
  jz $+0x18
  cmp al, 0xa
  jz $+0x10
  cmp al, 0xd
  jz $+0x8
  cmp al, 0x9
  jnz $+0x8
  inc r12
  jmp $-0x36
  cmp r12, r13
  jnb $+0x13
  cmp byte [r12], 0x22
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x7
  jmp $+0x824
  mov qword [rsp + 0x38], r12
  mov eax, 0x22222222
  movq xmm1, rax
  pshufd xmm1, xmm1, 0x0
  mov eax, 0x5c5c5c5c
  movq xmm2, rax
  pshufd xmm2, xmm2, 0x0
  mov rax, r13
  sub rax, r12
  cmp rax, 0x10
  jb $+0x46
  movdqu xmm0, xmmword [r12]
  movdqa xmm3, xmm1
  pcmpeqb xmm3, xmm0
  movdqa xmm4, xmm2
  pcmpeqb xmm4, xmm0
  por xmm3, xmm4
  pmovmskb eax, xmm3
  test eax, eax
  jz $+0x17
  tzcnt eax, eax
  add r12, rax
  cmp byte [r12], 0x22
  jz $+0x34
  jmp $+0x4a
  add r12, 0x10
  jmp $-0x58
  cmp r12, r13
  jnb $+0x8e
  movzx eax, byte [r12]
  cmp al, 0x22
  jz $+0x10
  cmp al, 0x5c
  jz $+0x23
  inc r12
  jmp $-0x26
  mov rax, r12
  sub rax, qword [rsp + 0x38]
  mov qword [rsp + 0x40], rax
  inc r12
  jmp $+0x66
  mov r10, qword [rsp + 0x38]
  mov rax, r12
  sub rax, r10
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r10
  mov rdx, rax
  lea rcx, qword [rsp + 0x38]
  lea r8, qword [rsp + 0x40]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x716
  jmp $+0x10
  mov dword [r15 + 0x10], 0x8
  jmp $+0x701
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x3
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x44
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x3
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x46
  mov dword [r15 + 0x10], 0xe
  jmp $+0x689
  mov byte [r14], 0x0
  mov qword [r15], r12
  mov rdi, r15
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x658
  jmp $+0x62b
  mov byte [r14], 0x1
  mov qword [rsp + 0x30], 0x0
  cmp r12, r13
  jnb $+0x2d
  movzx eax, byte [r12]
  cmp al, 0x20
  jz $+0x18
  cmp al, 0xa
  jz $+0x10
  cmp al, 0xd
  jz $+0x8
  cmp al, 0x9
  jnz $+0x8
  inc r12
  jmp $-0x36
  cmp r12, r13
  jnb $+0x604
  movzx eax, byte [r12]
  inc r12
  cmp al, 0x2c
  jz $+0x18
  cmp al, 0x7d
  jz $+0x1d
  mov dword [r15 + 0x10], 0xb
  jmp $+0x5dc
  mov byte [rsp + 0x48], 0x0
  jmp $+0x8
  mov byte [rsp + 0x48], 0x1
  movzx r10d, byte [rsp + 0x48]
  cmp r10d, 0x1
  jz $+0x556
  cmp r12, r13
  jnb $+0x2d
  movzx eax, byte [r12]
  cmp al, 0x20
  jz $+0x18
  cmp al, 0xa
  jz $+0x10
  cmp al, 0xd
  jz $+0x8
  cmp al, 0x9
  jnz $+0x8
  inc r12
  jmp $-0x36
  cmp r12, r13
  jnb $+0x13
  cmp byte [r12], 0x22
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x7
  jmp $+0x54f
  mov qword [rsp + 0x38], r12
  mov eax, 0x22222222
  movq xmm1, rax
  pshufd xmm1, xmm1, 0x0
  mov eax, 0x5c5c5c5c
  movq xmm2, rax
  pshufd xmm2, xmm2, 0x0
  mov rax, r13
  sub rax, r12
  cmp rax, 0x10
  jb $+0x46
  movdqu xmm0, xmmword [r12]
  movdqa xmm3, xmm1
  pcmpeqb xmm3, xmm0
  movdqa xmm4, xmm2
  pcmpeqb xmm4, xmm0
  por xmm3, xmm4
  pmovmskb eax, xmm3
  test eax, eax
  jz $+0x17
  tzcnt eax, eax
  add r12, rax
  cmp byte [r12], 0x22
  jz $+0x34
  jmp $+0x4a
  add r12, 0x10
  jmp $-0x58
  cmp r12, r13
  jnb $+0x8e
  movzx eax, byte [r12]
  cmp al, 0x22
  jz $+0x10
  cmp al, 0x5c
  jz $+0x23
  inc r12
  jmp $-0x26
  mov rax, r12
  sub rax, qword [rsp + 0x38]
  mov qword [rsp + 0x40], rax
  inc r12
  jmp $+0x66
  mov r10, qword [rsp + 0x38]
  mov rax, r12
  sub rax, r10
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r10
  mov rdx, rax
  lea rcx, qword [rsp + 0x38]
  lea r8, qword [rsp + 0x40]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x441
  jmp $+0x10
  mov dword [r15 + 0x10], 0x8
  jmp $+0x42c
  cmp r12, r13
  jge $+0x47
  movzx r10d, byte [r12]
  cmp r10b, 0x20
  jz $+0x1e
  cmp r10b, 0x9
  jz $+0x14
  cmp r10b, 0xa
  jz $+0xa
  cmp r10b, 0xd
  jnz $+0x8
  inc r12
  jmp $-0x3e
  cmp r10b, 0x3a
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x6
  jmp $+0x3cc
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x4
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x39
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x8
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x1ef
  jmp $+0x240
  cmp r12, r13
  jnb $+0x2d
  movzx eax, byte [r12]
  cmp al, 0x20
  jz $+0x18
  cmp al, 0xa
  jz $+0x10
  cmp al, 0xd
  jz $+0x8
  cmp al, 0x9
  jnz $+0x8
  inc r12
  jmp $-0x36
  cmp r12, r13
  jnb $+0x13
  cmp byte [r12], 0x22
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x7
  jmp $+0x2fd
  mov qword [rsp + 0x50], r12
  mov eax, 0x22222222
  movq xmm1, rax
  pshufd xmm1, xmm1, 0x0
  mov eax, 0x5c5c5c5c
  movq xmm2, rax
  pshufd xmm2, xmm2, 0x0
  mov rax, r13
  sub rax, r12
  cmp rax, 0x10
  jb $+0x46
  movdqu xmm0, xmmword [r12]
  movdqa xmm3, xmm1
  pcmpeqb xmm3, xmm0
  movdqa xmm4, xmm2
  pcmpeqb xmm4, xmm0
  por xmm3, xmm4
  pmovmskb eax, xmm3
  test eax, eax
  jz $+0x17
  tzcnt eax, eax
  add r12, rax
  cmp byte [r12], 0x22
  jz $+0x34
  jmp $+0x96
  add r12, 0x10
  jmp $-0x58
  cmp r12, r13
  jnb $+0xd1
  movzx eax, byte [r12]
  cmp al, 0x22
  jz $+0x10
  cmp al, 0x5c
  jz $+0x6f
  inc r12
  jmp $-0x26
  mov r10, qword [rsp + 0x50]
  mov r11, r12
  sub r11, r10
  mov qword [rsp + 0x58], r11
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r10
  mov edx, r11d
  mov rax, 0x<imm>
  call rax
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x219
  mov qword [r14 + 0x10], rax
  mov r10, qword [rsp + 0x58]
  mov qword [r14 + 0x18], r10
  mov qword [r14 + 0x8], r10
  inc r12
  jmp $+0x5d
  mov r10, qword [rsp + 0x50]
  mov rax, r12
  sub rax, r10
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x8]
  mov rdx, r10
  mov rcx, rax
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x1ac
  jmp $+0x10
  mov dword [r15 + 0x10], 0x8
  jmp $+0x197
  mov rax, qword [rsp + 0x30]
  mov r10, 0x1
  or rax, r10
  mov qword [rsp + 0x30], rax
  jmp $+0x83
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x20]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x141
  mov rax, qword [rsp + 0x30]
  mov r10, 0x2
  or rax, r10
  mov qword [rsp + 0x30], rax
  jmp $+0x2d
  mov qword [r15], r12
  mov rdi, r15
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xf2
  cmp r12, r13
  jnb $+0x2d
  movzx eax, byte [r12]
  cmp al, 0x20
  jz $+0x18
  cmp al, 0xa
  jz $+0x10
  cmp al, 0xd
  jz $+0x8
  cmp al, 0x9
  jnz $+0x8
  inc r12
  jmp $-0x36
  cmp r12, r13
  jnb $+0xb3
  movzx eax, byte [r12]
  inc r12
  cmp al, 0x2c
  jz $+0x18
  cmp al, 0x7d
  jz $+0x1d
  mov dword [r15 + 0x10], 0xb
  jmp $+0x8b
  mov byte [rsp + 0x48], 0x0
  jmp $+0x8
  mov byte [rsp + 0x48], 0x1
  movzx r10d, byte [rsp + 0x48]
  cmp r10d, 0x1
  jz $+0x5
  jmp $-0x556
  mov rax, qword [rsp + 0x30]
  mov r10, 0x3
  and rax, r10
  cmp rax, r10
  jz $+0x10
  mov dword [r15 + 0x10], 0xa
  jmp $+0x2d
  jmp $+0x0
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x60
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x60
  pop rbp
  ret
